--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Odin Project - Rock Paper Scissors</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
 	<script src="scripts/script1.js"></script>
+    <section id="header-section">
+        <h1 class="h1-titlu">Odin Project - Rock Paper Scissors</h1>
+    </section>
+    <section id="main-section">
+
+    </section>
+    <section id="footer-section">
+
+    </section>
   </body>
 </html>
