--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Odin Project - Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href="assets/fontawesome-free-6.2.1-web/css/fontawesome.css" rel="stylesheet">
+    <link href="assets/fontawesome-free-6.2.1-web/css/brands.css" rel="stylesheet">
+    <link href="assets/fontawesome-free-6.2.1-web/css/solid.css" rel="stylesheet">
   </head>
   <body>
 	<script src="scripts/script1.js"></script>
@@ -17,17 +20,23 @@
             <h2>Pick one and try your luck</h2>
         </div>
         <div class="alegeri-container">
-            <div class="rock-container"></div>
-            <div class="paper-container"></div>
-            <div class="scissors-container"></div>
+            <div class="alegere-container rock-container">
+                <i class="alegere-icon fa-regular fa-hand-fist"></i>
+            </div>
+            <div class="alegere-container rpaper-container">
+                <i class="alegere-icon fa-regular fa-scroll"></i>
+            </div>
+            <div class="alegere-container rscissors-container">
+                <i class="alegere-icon fa-solid fa-scissors"></i>
+            </div>
         </div>
         <div class="scor-container">
             <div class="scor-player-container">
-                <h2>Player:</h2>
+                <h2>Player: </h2>
                 <h2>0</h2>
             </div>
             <div class="scor-computer-container">
-                <h2>Computer:</h2>
+                <h2>Computer: </h2>
                 <h2>0</h2>
             </div>
         </div>
