--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="text-intro-container">
             <h2 id="status-joc">
                 <script>
-                    document.getElementById("status-joc").innerHTML = "Try your luck";
+                    document.getElementById("status-joc").innerHTML = "First to win 5 points wins. Human vs machine";
                 </script>
             </h2>
         </div>
