--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Odin Project - Rock Paper Scissors</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles/style.css">
     <link href="assets/fontawesome-free-6.2.1-web/css/fontawesome.css" rel="stylesheet">
     <link href="assets/fontawesome-free-6.2.1-web/css/brands.css" rel="stylesheet">
@@ -13,7 +13,7 @@
   <body>
 	<script src="scripts/script1.js"></script>
     <section id="header-section">
-        <h1 class="h1-titlu">Odin Project - Rock Paper Scissors</h1>
+        <h1 class="h1-titlu">Rock Paper Scissors</h1>
     </section>
     <section id="main-section">
         <div class="text-intro-container">
